<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeKeeper</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_ground">BackGround</string>
    <string name="title_activity_status_overview">Status_overview</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Temper">Temperature</string>
    <string name="Noise">Noise</string>
    <string name="Light">Lightness</string>
    <string name="title_activity_settings">Settings</string>
    <string name="noise_set">Noise</string>
    <string name="temp_set">Temperatue</string>
    <string name="light_set">Lightness</string>
    <string name="go_setting">Setttings</string>
    <string name="temp_val">0</string>
    <string name="distance_val">0</string>
    <string name="light_val">0</string>
    <string name="title_activity_visualization">Visualization</string>

</resources>
