<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cis542.finalproject.homekeeper.Status_overview" >

    <TextView
        android:id="@+id/standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <Button
        android:id="@+id/Temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop ="50dp"
        android:layout_marginLeft ="50dp"
        android:layout_below="@id/standard"
        android:text="@string/Temper" />
    
    <Button
        android:id="@+id/Noise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft ="@id/Temp"
        android:layout_marginTop ="50dp"
        android:layout_below="@id/Temp"
        android:text="@string/Noise" />
    
    <Button
        android:id="@+id/Lightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft ="@id/Temp"
        android:layout_marginTop ="50dp"
        android:layout_below="@id/Noise"
        android:text="@string/Light" />
   
    <Button
        android:id="@+id/Setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft ="true"
        android:layout_alignParentBottom="true"
        android:text="@string/go_setting" />
    
    

</RelativeLayout>
