<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cis542.finalproject.homekeeper.Settings" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <TextView
        android:id="@+id/temp_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/temp_set" />
    
    <TextView
        android:id="@+id/distance_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below = "@id/temp_set"
        android:layout_marginTop = "50dp"
        android:text="@string/noise_set" />
    
    <TextView
        android:id="@+id/light_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop = "50dp"
        android:layout_below = "@id/distance_set"
        android:text="@string/light_set" />
    
    <SeekBar
	     android:id="@+id/seekBar_temp"
	     android:layout_width="300dp"
	     android:layout_height="wrap_content"
	     android:layout_alignBottom = "@id/temp_set"
	     android:layout_toRightOf="@id/temp_set"
	     android:layout_marginLeft="10dp"/>
    
      
    <TextView
        android:id="@+id/temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom = "@id/temp_set"
        android:layout_toRightOf="@id/seekBar_temp"
        android:layout_marginLeft="10dp"
        android:text="@string/temp_val" />
    
    <SeekBar
	     android:id="@+id/seekBar_distance"
	     android:layout_width="300dp"
	     android:layout_height="wrap_content"
	     android:layout_alignBottom = "@id/distance_set"
	     android:layout_alignLeft = "@id/seekBar_temp"/>
    
    <TextView
        android:id="@+id/distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom = "@id/distance_set"
        android:layout_toRightOf="@id/seekBar_distance"
        android:layout_marginLeft="10dp"
        android:text="@string/distance_val" />

    <SeekBar
	     android:id="@+id/seekBar_light"
	     android:layout_width="300dp"
	     android:layout_height="wrap_content"
	     android:layout_alignBottom = "@id/light_set"
	     android:layout_toRightOf="@id/temp_set"
	     android:layout_alignLeft = "@id/seekBar_temp"/>
    
    <TextView
        android:id="@+id/light_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom = "@id/light_set"
        android:layout_toRightOf="@id/seekBar_light"
        android:layout_marginLeft="10dp"
        android:text="@string/light_val" />
    
    
    <Button
       android:id="@+id/confirm"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentRight="true"
       android:layout_alignParentBottom="true"
       android:text="@string/hello_world" />
    

</RelativeLayout>
