<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="cis542.finalproject.homekeeper.Welcome" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
    <ImageView 
        	android:id="@+id/theimage"
       		android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:contentDescription="@string/back_ground"
        	android:layout_marginTop="20dip"
        	android:gravity="bottom"
        	android:src="@drawable/download"
        	android:paddingTop="0dip"
        	/>  

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->
	

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <RelativeLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

        
            <Button
                android:id="@+id/start_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/dummy_button" />
        </RelativeLayout>
    </FrameLayout>

</FrameLayout>
